--- a/Backend/Dev-learning-Platform/src/main/resources/application-render.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-render.properties
@@ -4,10 +4,8 @@
 server.port=${PORT:8080}
 
 # Database Configuration (Render PostgreSQL)
-# Use individual components instead of DATABASE_URL
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT:5432}/${DB_NAME}?sslmode=require
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+# Use DATABASE_URL directly from Render
+spring.datasource.url=${DATABASE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # HikariCP Configuration
