--- a/Backend/Dev-learning-Platform/src/main/resources/application.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application.properties
@@ -11,12 +11,12 @@ server.port=${PORT:8080}
 # Configuración por defecto para desarrollo
 # Para producción, usar application-prod.properties
 
-# Si hay variables de PostgreSQL, usar PostgreSQL, sino H2
-spring.datasource.url=${DATABASE_URL:${DB_HOST:jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MySQL;DATABASE_TO_LOWER=TRUE}}
-spring.datasource.username=${DB_USER:${DATABASE_USERNAME:sa}}
-spring.datasource.password=${DB_PASSWORD:${DATABASE_PASSWORD:password}}
-spring.datasource.driver-class-name=${DB_DRIVER:${DATABASE_DRIVER:org.h2.Driver}}
-spring.jpa.database-platform=${DB_DIALECT:${DATABASE_PLATFORM:org.hibernate.dialect.H2Dialect}}
+# Si hay DATABASE_URL, usar PostgreSQL, sino H2
+spring.datasource.url=${DATABASE_URL:jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MySQL;DATABASE_TO_LOWER=TRUE}
+spring.datasource.username=${DATABASE_USERNAME:sa}
+spring.datasource.password=${DATABASE_PASSWORD:password}
+spring.datasource.driver-class-name=${DATABASE_DRIVER:org.h2.Driver}
+spring.jpa.database-platform=${DATABASE_PLATFORM:org.hibernate.dialect.H2Dialect}
 spring.jpa.hibernate.ddl-auto=${DDL_AUTO:update}
 
 # ==============================================
