Force render profile activation in application.properties

--- a/Backend/Dev-learning-Platform/src/main/resources/application.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application.properties
@@ -6,6 +6,12 @@ spring.application.name=Dev-learning-Platform
 server.port=${PORT:8080}
 
 # ==============================================
+# CONFIGURACIÓN DE PERFILES
+# ==============================================
+# Activar perfil render en producción
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:render}
+
+# ==============================================
 # CONFIGURACIÓN DE BASE DE DATOS
 # ==============================================
 # Configuración por defecto para desarrollo
