--- a/Backend/Dev-learning-Platform/src/main/resources/application.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application.properties
@@ -23,7 +23,11 @@ spring.datasource.username=${DATABASE_USERNAME:sa}
 spring.datasource.password=${DATABASE_PASSWORD:password}
 spring.datasource.driver-class-name=${DATABASE_DRIVER:org.h2.Driver}
 spring.jpa.database-platform=${DATABASE_PLATFORM:org.hibernate.dialect.H2Dialect}
+
+# Configuración específica para PostgreSQL cuando DATABASE_URL está presente
 spring.jpa.hibernate.ddl-auto=${DDL_AUTO:update}
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 
 # ==============================================
 # CONFIGURACIÓN DE FLYWAY
