Add DatabaseConfig to convert postgresql:// to jdbc:postgresql:// for Spring Boot compatibility

--- a/Backend/Dev-learning-Platform/src/main/resources/application.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application.properties
@@ -18,6 +18,7 @@ spring.profiles.active=${SPRING_PROFILES_ACTIVE:render}
 # Para producción, usar application-prod.properties
 
 # Si hay DATABASE_URL, usar PostgreSQL, sino H2
+# Para PostgreSQL, agregar prefijo jdbc: si no está presente
 spring.datasource.url=${DATABASE_URL:jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MySQL;DATABASE_TO_LOWER=TRUE}
 spring.datasource.username=${DATABASE_USERNAME:sa}
 spring.datasource.password=${DATABASE_PASSWORD:password}
