--- a/Backend/Dev-learning-Platform/Dockerfile
+++ b/Backend/Dev-learning-Platform/Dockerfile
@@ -19,7 +19,7 @@ RUN mvn dependency:go-offline -B
 COPY src ./src
 
 # Build the application
-RUN mvn clean package -DskipTests
+RUN mvn clean package -Dmaven.test.skip=true
 
 # Expose port
 EXPOSE 8080
