Fix CORS configuration for Netlify frontend - all profiles updated

--- a/Backend/Dev-learning-Platform/src/main/resources/application-dev.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-dev.properties
@@ -56,7 +56,10 @@ oci.objectstorage.public-url-base=https://objectstorage.sa-bogota-1.oraclecloud.
 # ==============================================
 # CONFIGURACIÓN DE CORS
 # ==============================================
-
+app.cors.allowed-origins=http://localhost:5173,http://127.0.0.1:5173,https://e-learning-platform-v2.netlify.app
+app.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+app.cors.allowed-headers=*
+app.cors.allow-credentials=true
 app.frontend.url=http://localhost:5173
 
 # ==============================================
