--- a/Backend/Dev-learning-Platform/src/main/resources/application-local.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-local.properties
@@ -48,7 +48,10 @@ oci.enabled=false
 # ==============================================
 # CONFIGURACIÓN DE CORS PARA DESARROLLO LOCAL
 # ==============================================
-app.cors.allowed-origins=http://localhost:5173,http://127.0.0.1:5173
+app.cors.allowed-origins=http://localhost:5173,http://127.0.0.1:5173,https://e-learning-platform-v2.netlify.app
+app.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+app.cors.allowed-headers=*
+app.cors.allow-credentials=true
 app.frontend.url=http://localhost:5173
 
 # ==============================================
