--- a/Backend/Dev-learning-Platform/src/main/resources/application-prod.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-prod.properties
@@ -34,7 +34,7 @@ app.upload.local.base-url=${APP_BASE_URL:http://localhost:8080}/uploads
 app.upload.local.path=uploads
 
 # Configuración CORS para producción
-app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5173,https://tu-dominio.com}
+app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173,http://localhost:3000,https://e-learning-platform-v2.netlify.app,https://68d0836270eee69b08cba3cf--e-learning-platform-v2.netlify.app,https://68d0deeabd4111a3616181dd--e-learning-platform-v2.netlify.app}
 app.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 app.cors.allowed-headers=*
 app.cors.allow-credentials=true
