--- a/Backend/Dev-learning-Platform/src/main/resources/application-vercel.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-vercel.properties
@@ -12,10 +12,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=false
 
 # CORS
-cors.allowed-origins=${CORS_ORIGINS:https://68d0836270eee69b08cba3cf--e-learning-platform-v2.netlify.app,http://localhost:3000,http://localhost:5173}
-cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-cors.allowed-headers=*
-cors.allow-credentials=true
+app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173,http://localhost:3000,https://e-learning-platform-v2.netlify.app,https://68d0836270eee69b08cba3cf--e-learning-platform-v2.netlify.app,https://68d0deeabd4111a3616181dd--e-learning-platform-v2.netlify.app}
+app.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+app.cors.allowed-headers=*
+app.cors.allow-credentials=true
 
 # JWT
 jwt.secret=${JWT_SECRET:mySecretKey}
