--- a/Backend/Dev-learning-Platform/src/main/resources/application.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application.properties
@@ -72,7 +72,7 @@ stripe.cancel.url=${STRIPE_CANCEL_URL:http://localhost:5173/payment/cancel}
 # ==============================================
 # CONFIGURACIÓN DE CORS
 # ==============================================
-app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173,http://localhost:3000,https://e-learning-platform-v2.netlify.app,https://68d06339dd81684b199dbda2--e-learning-platform-v2.netlify.app,https://68d06458dd81684dc29dbe15--e-learning-platform-v2.netlify.app,https://68d0836270eee69b08cba3cf--e-learning-platform-v2.netlify.app,https://68d0deeabd4111a3616181dd--e-learning-platform-v2.netlify.app}
+app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173,http://localhost:3000,https://e-learning-platform-v2.netlify.app,https://68d06339dd81684b199dbda2--e-learning-platform-v2.netlify.app,https://68d06458dd81684dc29dbe15--e-learning-platform-v2.netlify.app,https://68d0836270eee69b08cba3cf--e-learning-platform-v2.netlify.app,https://68d0deeabd4111a3616181dd--e-learning-platform-v2.netlify.app,https://68d1b6cdca4fcea0c285e9ad--e-learning-platform-v2.netlify.app}
 app.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 app.cors.allowed-headers=*
 app.cors.allow-credentials=true
